syntax = "proto3";
package bss;

message BoxProtobufPayload {
  string name = 1;
  bytes payload = 2;
}

message ClientLoginRequest {
  string account = 1;
  string password = 2;
}

message ClientLoginResponse {
  int32 code = 1;
  string message = 2;
}

message CreateRoomRequest {
  int32 game_type = 1;
  bool init_public = 2;
}

message JoinRoomRequest {
  int32 game_type = 1;
  int32 room_id = 2;
}

message MateRoomRequest { int32 game_type = 1; }

message ReconnectRoomRequest { int32 game_type = 1; }

message JoinRoomResponse {
  int32 code = 1;
  int32 message = 2;
}

message RoomPlayerAction {
  optional bool ready = 1;
  optional string chat = 2;
  repeated int32 chat_receiver = 3;
  optional bool make_public = 4;
}

message RoomPlayerChangeEvent {
  repeated RoomPlayer players = 1;
  optional PlayerChat chat = 2;
  bool public = 3;
}

message RoomPlayer {
  string account = 1;
  string display_name = 2;
  int32 index = 3;
  bool ready = 4;
}

message PlayerChat {
  int32 player_index = 1;
  string message = 2;
}